refactor pictures dto
