# src/dto/pictures_dto.go
@@ -1,0 +1,7 @@
+package dto
+
+import "mime/multipart"
+
+type PicturesDTO struct {
+	Pictures *[]multipart.FileHeader `structs:",omitempty" form:"pictures,omitempty" swaggerignore:"true"`
+}
