# src/dto/roommate_request_picture_dto.go
@@ -1,7 +1,0 @@
-package dto
-
-import "mime/multipart"
-
-type RoommateRequestPictureDTO struct {
-	RoomPictures *[]multipart.FileHeader `structs:",omitempty" form:"room_pictures,omitempty" swaggerignore:"true"`
-}
